[package]

name = "envelope"
description = "An interpolatable Envelope trait along with a generic 2D Point trait. Useful for controlling parameters over time."
version = "0.6.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["interpolate", "dsp", "audio", "time", "2D"]
license = "MIT"
repository = "https://github.com/RustAudio/envelope.git"
homepage = "https://github.com/RustAudio/envelope"


[dependencies]
interpolation = "*"
num = "*"
rustc-serialize = "*"

