[package]
name = "envelope"
description = "An interpolatable Envelope trait along with a generic 2D Point trait. Useful for controlling parameters over time."
version = "0.8.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["interpolate", "dsp", "audio", "time", "2D"]
license = "MIT"
repository = "https://github.com/RustAudio/envelope.git"
homepage = "https://github.com/RustAudio/envelope"

[dependencies]
interpolation = "0.1.0"
num = "0.1.31"
serde = { optional = true, version = "0.7.0" }
serde_json = { optional = true, version = "0.7.0" }

[features]
serde_serialization = ["serde", "serde_json"]
